- restored empty labels (for column alignment) - fixed address-info style to allow lines to wrap - updated font sizes to rems - update line height to rems - added comment to explain suspicious px value

--- a/coops-ui/src/assets/styles/base.scss
+++ b/coops-ui/src/assets/styles/base.scss
@@ -35,12 +35,14 @@ body {
 }
 
 html {
-  font-size: 14px;
+  // default font size (14px)
+  font-size: 0.875rem;
 }
 
 @media (min-width: 960px) {
   html {
-    font-size: 16px;
+    // default font size (16px)
+    font-size: 1rem;
   }
 }
 
